<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/riderrRegisterLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/emailTxtBoxRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_riderrlonglogooutline" />

    <EditText
        android:id="@+id/emailTxtBoxRegister"
        android:layout_width="350dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#FDB515"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        android:textColor="#FDB515"
        android:textColorHint="#FDB515"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/passwordTextBoxRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/riderrRegisterLogo" />

    <EditText
        android:id="@+id/passwordTextBoxRegister"
        android:layout_width="350dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#FDB515"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="#FDB515"
        android:textColorHint="#FDB515"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/RegisterBtnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTxtBoxRegister"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/RegisterBtnRegister"
        android:layout_width="351dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/californiaGold"
        android:text="REGISTER"
        android:textColor="@color/colorPrimary"
        app:layout_constraintBottom_toTopOf="@+id/loginMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextBoxRegister" />

    <TextView
        android:id="@+id/loginMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="If you have an account then you can Login"
        android:textColor="#fdb515"
        app:layout_constraintBottom_toTopOf="@+id/loginBtnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RegisterBtnRegister"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/loginBtnRegister"
        android:layout_width="351dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="84dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="LOGIN"
        android:textColor="@color/californiaGold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginMessage" />
</androidx.constraintlayout.widget.ConstraintLayout>